--- a/src/frontend/styles/index.css
+++ b/src/frontend/styles/index.css
@@ -33,3 +33,9 @@ h1, h2, h3 {
 p, span, div {
   font-family: var(--font-body);
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
