--- a/src/frontend/styles/index.css
+++ b/src/frontend/styles/index.css
@@ -19,8 +19,14 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+  background-color: var(--color-white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
 }
 
 h1 {
@@ -51,6 +57,7 @@ button {
   border: none;
   padding: 20px;
   cursor: pointer;
+  font-size: 1.5rem;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
