--- a/src/frontend/styles/loadingScreen.css
+++ b/src/frontend/styles/loadingScreen.css
@@ -29,3 +29,22 @@ img {
     line-height: 23.46px;
     letter-spacing: 0.43rem;
 }
+
+@media (max-width: 480px) {
+
+    img {
+        display: block;
+        margin: 0 auto;
+        width: 50%;
+        height: 50%;
+        cursor: pointer;
+    }
+
+    .loading__screen-title {
+        display: block;
+        margin: 0 auto;
+        font-weight: 400;
+        font-size: 3.75rem;
+        line-height: 72px;
+    }
+}
