--- a/src/frontend/styles/bookingPage.css
+++ b/src/frontend/styles/bookingPage.css
@@ -52,6 +52,8 @@ fieldset {
     position: relative;
     margin: 0 auto;
     gap: 16px;
+    text-transform: uppercase;
+    font-size: 0.75rem;
 }
 
 fieldset:has(input:focus) {
