--- a/src/frontend/styles/index.css
+++ b/src/frontend/styles/index.css
@@ -8,6 +8,8 @@
   --color-white: #FFF4F1;
   --color-red: #EC315A;
   --color-purple: #441D81; 
+  --color-dark: #1C1919;
+
   --font-title: "Bebas Neue", sans-serif;
   --font-body: "Work Sans", sans-serif;
   
@@ -19,7 +21,7 @@
 }
 
 body {
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   background-color: var(--color-white);
   display: flex;
