--- a/src/frontend/styles/confirmationPage.css
+++ b/src/frontend/styles/confirmationPage.css
@@ -1,10 +1,5 @@
-.confirmation__page {
-    height: 100vh;
-    width: 100%;
-}
-
 .confirmation__container {
-    margin-top: 100px;
+    margin-top: 30px;
 }
 
 .confirmation__title {
@@ -28,6 +23,7 @@
     border: 1px solid #EC315A;
     padding: 12px;          
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .confirmation__context {
@@ -43,4 +39,20 @@
 
 .price {
     color: var(--color-red);
+}
+
+.confirmation__container-error {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.confirmation__button {
+   margin-bottom: 20px;
 }
